--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.2.10",
+    "@angular/animations": "^12.2.13",
     "@angular/cdk": "^12.2.9",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
@@ -20,7 +20,12 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@auth0/angular-jwt": "^5.0.2",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "alertifyjs": "^1.13.1",
     "bootstrap": "^5.1.3",
+    "jwt-decode": "^3.1.2",
+    "ngx-loading": "^8.0.0",
     "ngx-toastr": "^14.1.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
