--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
+    "@angular/localize": "~12.2.0",
     "@angular/material": "^12.2.9",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@auth0/angular-jwt": "^5.0.2",
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "alertifyjs": "^1.13.1",
     "bootstrap": "^5.1.3",
     "jwt-decode": "^3.1.2",
