--- a/package.json
+++ b/package.json
@@ -24,12 +24,26 @@
     "@auth0/angular-jwt": "^5.0.2",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@sweetalert2/ngx-sweetalert2": "^10.0.0",
+    "@types/datatables.net": "^1.10.21",
+    "@types/jquery": "^3.5.8",
     "alertifyjs": "^1.13.1",
+    "angular-datatables": "^12.0.1",
     "bootstrap": "^5.1.3",
+    "datatables.net": "^1.11.3",
+    "datatables.net-buttons": "^2.0.1",
+    "datatables.net-buttons-dt": "^2.0.1",
+    "datatables.net-dt": "^1.11.3",
+    "jquery": "^3.6.0",
+    "jszip": "^3.7.1",
     "jwt-decode": "^3.1.2",
+    "ngx-bootstrap": "^7.1.0",
     "ngx-loading": "^8.0.0",
     "ngx-toastr": "^14.1.3",
     "rxjs": "~6.6.0",
+    "save": "^2.4.0",
+    "save-dev": "0.0.1-security",
+    "sweetalert2": "^11.1.10",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -37,6 +51,7 @@
     "@angular-devkit/build-angular": "~12.2.6",
     "@angular/cli": "~12.2.6",
     "@angular/compiler-cli": "~12.2.0",
+    "@types/datatables.net-buttons": "^1.4.7",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
